2002-11-13  David Hyatt  <hyatt@apple.com>

	Rewrite cellpadding to not use the style system at all and
	to make table cells just get the padding from the table
	itself (overriding style).
	
        * khtml/html/html_tableimpl.cpp:
        (HTMLTableElementImpl::HTMLTableElementImpl):
        (HTMLTableElementImpl::attach):
        (HTMLTableElementImpl::parseAttribute):
        (HTMLTableCellElementImpl::init):
        * khtml/html/html_tableimpl.h:
        * khtml/rendering/bidi.cpp:
        (RenderFlow::layoutInlineChildren):
        * khtml/rendering/render_box.cpp:
        (RenderBox::contentWidth):
        (RenderBox::contentHeight):
        * khtml/rendering/render_flow.cpp:
        (RenderFlow::layoutBlockChildren):
        (RenderFlow::leftOffset):
        (RenderFlow::rightOffset):
        (RenderFlow::calcMinMaxWidth):
        * khtml/rendering/render_object.h:
        * khtml/rendering/render_table.cpp:
        (RenderTable::RenderTable):
        (RenderTableCell::paddingTop):
        (RenderTableCell::paddingBottom):
        (RenderTableCell::paddingLeft):
        (RenderTableCell::paddingRight):
        * khtml/rendering/render_table.h:

2002-11-13  Ken Kocienda  <kocienda@apple.com>

	Bump WebCore cache to 4 MB (was 1 MB).

        * khtml/misc/loader.cpp

2002-11-13  Maciej Stachowiak  <mjs@apple.com>

	- fixed 3050447 - Policy handlers have no way of telling client
	that the proposed navigation is a form post
	
        * khtml/khtml_part.cpp:
        (KHTMLPart::submitForm): Call kwq->submitForm
        * kwq/KWQKHTMLPart.h:
        * kwq/KWQKHTMLPart.mm:
        (KWQKHTMLPart::openURL): Adjusted for bridge API change.
        (KWQKHTMLPart::openURLRequest): Removed POST handling.
	(KWQKHTMLPart::submitForm): Added this back, because we need to
	know what URL navigations are caused by form submission, even if
	they are not POSTs.
        (KWQKHTMLPart::urlSelected): Adjusted for bridge API change.